# Pazi

./: CMakeLists.txt  Doxyfile  lab2.c
